--- a/index.html
+++ b/index.html
@@ -5,7 +5,21 @@
 </head>
 <body>
 
-  <!-- Write your HTML in this file -->
+  <ol>
+    <li>Grilled Cheese
+        <ol>
+          <li>Spread butter on bread and frying pan</li>
+          <li>Place bread in frying pan and fry</li>
+          <li>Add cheese on top of bread</li>
+          <li>Cover with second slice of bread</li>
+          <li>Turn over and fry for 2 minutes</li>
+        </ol>
+    <li>Sushi
+    <li>Cheese and crackers
+    <li>Cheese soup
+    <li>Nacho Cheese French Fries
+  </ol>
+  
 
 </body>
 </html>
